fix bugs
- Add addEventListener for "show more" functionality
- Add "..." at the end of truncated text

--- a/src/sparnatural-yasr-plugin-grid/index.scss
+++ b/src/sparnatural-yasr-plugin-grid/index.scss
@@ -147,7 +147,7 @@
 }
 
 .show-more {
-  padding-left: 5px;
+  //padding-left: 5px;
   cursor: pointer;
   color: blue;
   text-decoration: underline;
